# loinstante_website

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/src/: errors.rs  main.rs
backend/src/handlers/: auth_handler.rs  mod.rs  profile_handler.rs  register_handler.rs  support_handler.rs
backend/src/models/: mod.rs  user.rs
backend/src/repositories/: mod.rs  session_repository.rs  user_repository.rs
backend/src/services/: auth_service.rs
backend/src/utils/: fingerprint.rs  mod.rs
db/: .env.example  .gitignore  README.md  docker-compose.yml
db/init/: 00_full_init.sql  01_create_user_db_and_table.sql  02_create_sessions_table.sql  03_add_session_metadata.sql  04_seed_user_profile_picture.sql  05_alter_profile_picture_to_text.sql  README.md
frontend/: eslint.config.mjs  middleware.ts
frontend/app/: globals.css  layout.tsx  page.tsx  product.tsx
frontend/app/api/support/: route.ts
frontend/app/dubinstante/: page.tsx
frontend/app/login/: page.tsx
frontend/app/logout/: page.tsx
frontend/app/product/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/register/: page.tsx
frontend/app/support/: page.tsx
frontend/app/tarif/: page.tsx
frontend/components/: FeatureList.tsx  Header.tsx  LoginForm.tsx  PresentationBox.tsx  PricingBadge.tsx  PricingCard.tsx  ProductBox.tsx  RegisterForm.tsx
frontend/contexts/: AuthContext.tsx
