[package]
name = "loinstante_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros", "multipart"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "uuid"] }
dotenvy = "0.15"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
anyhow = "1.0"
hyper = { version = "0.14", features = ["server"] }
uuid = { version = "1", features = ["serde", "v4"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "multipart"] }

[dev-dependencies]
# no external mocking lib required for simple unit tests

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
